# guimar_app

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yaml  test.yaml
app/: main.py
app/database/: crud.py
app/routes/: route_api.py  route_db.py  route_home.py
app/static/: index.html
tests/: func_test.py  main_test.py
