[tool.poetry]
name = "guimar-app"
version = "0.1.0"
description = ""
authors = ["Christian Garcia <rojolocco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
